--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@angular/service-worker": "~10.0.3",
     "@angular/youtube-player": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
