--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,6 +34,7 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: public
+          build_dir: dist/reddit-yt
+          author: miltonlaxer@austen.com
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
