--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,5 +25,14 @@ jobs:
         run: npm run lint
       - name: Build
         run: npm run build --prod
-      - name: Deploy
-        run: npm run deploy
+      - name: Check GitHub Pages Status
+        uses: crazy-max/ghaction-github-status@v1
+        with:
+          pages_threshold: major_outage
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          target_branch: gh-pages
+          build_dir: dist/reddit-yt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
