--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-ghpages": "ng build --prod --repo=https://github.com/astone2014/reddit-yt --base-href=https://astone2014.github.io/reddit-yt --deploy-href=https://astone2014.github.io/reddit-yt",
+    "build-ghpages": "ng build --prod --base-href /reddit-yt --deploy-url /reddit-yt",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
