--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-ghpages": "ng build --prod --output-path docs --base-href /reddit-yt",
+    "build-ghpages": "ng build --prod --base-href /reddit-yt",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
