--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 14.16.0
+      - name: Use Node.js 14.16.0 🟩
         uses: actions/setup-node@v1
         with:
           node-version: 14.16.0
@@ -23,13 +23,14 @@ jobs:
         run: npm install
       - name: Lint
         run: npm run lint
-      - name: Build
+      - name: Build 🔧
         run: npm run build-ghpages
       - name: Check GitHub Pages Status
         uses: crazy-max/ghaction-github-status@v1
         with:
           pages_threshold: major_outage
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages 🚀
+        if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
