add domain to deploy to gh pages

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,5 +35,6 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: dist/reddit-yt
+          fqdn: watch.austen.info
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
