--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         run: npm install
       - name: Lint
         run: npm run lint
+        continue-on-error: true
       - name: Build 🔧
         run: npm run build-ghpages
       - name: Check GitHub Pages Status
