--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,14 +19,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.16.0
-      - name: Install dependencies
+      - name: Install dependencies 📥
         run: npm install
-      - name: Lint
+      - name: Lint ✏️
         run: npm run lint
         continue-on-error: true
       - name: Build 🔧
         run: npm run build-ghpages
-      - name: Check GitHub Pages Status
+      - name: Check GitHub Pages Status 👀
         uses: crazy-max/ghaction-github-status@v1
         with:
           pages_threshold: major_outage
