--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,23 +15,29 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
       - name: Use Node.js 14.16.0 🟩
         uses: actions/setup-node@v1
         with:
           node-version: 14.16.0
+          
       - name: Install dependencies 📥
         run: npm install
+        
       - name: Lint ✏️
         run: npm run lint
         continue-on-error: true
+        
       - name: Build 🔧
         run: npm run build-ghpages
+        
       - name: Check GitHub Pages Status 👀
         uses: crazy-max/ghaction-github-status@v1
         with:
           pages_threshold: major_outage
+          
       - name: Deploy to GitHub Pages 🚀
-        if: success()
+        if: success() && github.actor != 'depbot'
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
