--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,7 +33,7 @@ jobs:
         continue-on-error: true
 
       - name: Check for updates ☝️
-        run: ng update @angular/material
+        run: npm run check-updates
         continue-on-error: true
 
   build:
