--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-ghpages": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
+    "check-updates": "ng update",
     "e2e": "ng e2e"
   },
   "private": true,
